css/main.css
html {
  min-height: 100%;
}

/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */

body {
  font-family: Hind,"sans-serif";
  background: #000;
  margin-top: 49px;
  max-width: 1000;
}

/* ////////////////////////////////////////////////////////////// */
/* //////////////////// Scroll Bar Css ////////////////////////// */
/* ////////////////////////////////////////////////////////////// */

body::-webkit-scrollbar {
    width: .2em;
}

body::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
}

body::-webkit-scrollbar-thumb {
  background-color: #fff;
  outline: 1px solid #fff;
}


/* ////////////////////////////////////////////////////////////// */
/* /////////////////////// NAVBAR CSS /////////////////////////// */
/* ////////////////////////////////////////////////////////////// */

/* Remove the navbar's default margin-bottom and rounded borders */
.navbar {
  margin:0;
  padding:0;
  border-radius: 0;
}
/*                            END                                */

/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */
/* Jumbotron CSS */
.jumbotron{
  color:#fff;

  height:300px;

  background-image: url('img/jumbo-bg.jpeg');
  background-position: center;
  background: cover;

  margin:auto;
  padding:auto;
}
/* END */

/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */
.stream-family{
  margin:0 auto;
}
/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */
.twitch{
  margin:0;
  padding:0;;
}

/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */

.twitchStreams{
  min-width: 100%;
  display: block;
  margin:0;
  padding:0;
}
.nav-section{
  margin-top:10px;
}
/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */
.results-section{
  align-content: space-around;
  text-align: center;
}
.row.card-container{
  margin:0;
  padding:0;
  align-items: center;
  text-align: center;
}
.theCard{
  margin:5px auto;
  padding:0;

  width: 300px;

  border:#000;
}
.card-text{
  text-align: center;
  margin: 0 auto;
  height:25px;
}

/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */

.card-text{
  font-size:10px;
}

/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */

.logo{
 border-radius:100%;

 height:50px;
 width:50px;

 padding: 0;
 margin: auto;
}

/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */

.footer {
  padding-top: 15px;
  margin: 0;

  background-color: #fff;
}
/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */

@media screen and (min-width:768px){
/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */

  .jumbotron{
    font-size: 15px;
    line-height: 0;
    padding:0;
  }
  .theCard{
    width: 525px;
  }

/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */
}

/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */

@media screen and (min-width:900px){
/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */

/* Jumbotron CSS */
.jumbotron{
  height: 730px;
}
.jumbotron h1{
  line-height: 8;
  text-align: center;
}
/* END */
.twitch{
  width:50%;
}

/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */
/* ////////////////////////////////////////////////////////////// */
}

